Fixing Spacing Issue on Experience

--- a/source/_patterns/00-atoms/layout/layout-site/layout-site.scss
+++ b/source/_patterns/00-atoms/layout/layout-site/layout-site.scss
@@ -4,7 +4,8 @@
     }
 }
 
-#layout--education {
+#layout--education,
+#layout--experience {
     .container {
         @extend .mb-5;
         padding: 0 2.5rem;
